edit index sama tambah 1 html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="card">
         <img src="img/Group 4.png" class="card-img-top" alt="...">
         <div class="card-body" style="text-align: center">
-          <a href="detail1.html"><h5 class="card-title judulCard">Pizza Hut Landing Page</h5></a>
+          <a href="pizzahut.html"><h5 class="card-title judulCard">Pizza Hut Landing Page</h5></a>
           <p class="card-text">This is a little view of Pizza Hut landing site website.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
